Fix stretch cards

--- a/assets/scss/molecules/cards/_publication-card.scss
+++ b/assets/scss/molecules/cards/_publication-card.scss
@@ -33,7 +33,7 @@
         &:not(.large):not(.wide) {
             .hover-slide {
                 @include breakpoint(small only) {
-                    display: flex;
+                    display: block;
                 }
             }
         }
@@ -45,11 +45,6 @@
                 height: 100%;
                 padding: 63px 30px;
 
-                @include breakpoint(small only) {
-                    max-height: 500px;
-                    padding: 18px 30px;
-                }
-
                 .image {
                     height: 100%;
                     display: flex;
@@ -59,6 +54,15 @@
 
                     img {
                         height: 100%;
+                    }
+                }
+
+                @include breakpoint(small only) {
+                    max-width: none;
+                    padding: 18px 30px;
+
+                    .image {
+                        display: block;
                     }
                 }
             }
